[package]
edition = "2021"
license = "MIT"
name = "yosemite"
readme = "README.md"
repository = "https://github.com/altonen/yosemite"
version = "0.1.0"

[dependencies]
futures = { version = "0.3.30", optional = true }
nom = "7.1.3"
rand = "0.8.5"
thiserror = "1.0.64"
tokio-util = { version = "0.7.7", features = ["compat", "io", "codec"], optional = true }
tokio = { version = "1.40.0", features = ["net", "rt-multi-thread", "io-util", "time"], optional = true }
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.40.0", features = ["net", "macros", "rt-multi-thread"] }

[features]
default = ["async"]
async = ["dep:futures", "dep:tokio", "dep:tokio-util"]
sync = []
