[package]
edition = "2021"
description = "Asynchronous SAMv3 library"
license = "MIT"
name = "yosemite"
readme = "README.md"
keywords = ["i2p", "network", "async", "sam"]
repository = "https://github.com/altonen/yosemite"
version = "0.4.2"

[dependencies]
futures = { version = "0.3.30", optional = true }
nom = "7.1.3"
rand = "0.8.5"
smol = { version = "2.0.2", optional = true }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["net", "rt-multi-thread", "io-util"], optional = true }
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.40.0", features = ["net", "macros", "rt-multi-thread", "time"] }

[features]
default = ["tokio"]
tokio = ["dep:futures", "dep:tokio"]
smol = ["dep:futures", "dep:smol"]
async-extra = []
sync = []
